# Aero-Player

./: .env.example  .gitignore  LICENSE  README.md  TAURI.md  electron-builder.config.js  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri-probe.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  eqapo.rs  lib.rs  main.rs
src/main/: file-scanner.js  index.js  ipc-handlers.js  metadata-reader.js  playlists-store.js  preload.js  spotify-api.js  store.js  youtube-api.js
src/main/auth/: google-auth.js  spotify-auth.js
src/renderer/: index.html
src/renderer/assets/fonts/: LEEME.txt
src/renderer/js/: _url-helper.js  aero-tauri.js  app.js  discord.js  drag-drop.js  intro-sound.js  library.js  player.js  playlists.js  profile.js  queue.js  settings.js  setup.js  sidebar.js  spotify.js  visualizer.js  youtube.js
src/renderer/styles/: aero-fx.css  animations.css  glass.css  main.css  player.css  playlists.css  settings.css  sidebar.css  themes.css
tauri-probe/: index.html
