[package]
name = "aero-player"
version = "1.2.0"
description = "Media player de escritorio con estetica Windows 7 Aero Liquid Glass"
authors = ["lordvamp9"]
edition = "2021"
publish = false

[lib]
name = "aero_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6", features = [] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
lofty = "0.21"
base64 = "0.22"
log = "0.4"
discord-rich-presence = "0.2"
once_cell = "1.20"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-log = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
